1. add logback config to disable hazelcast logo output; 2. add a jvm argument for hazelcast; 3. add a cluster config to node join; 4. init cluster when a node is booted.